vcluster/vcluster-llm-demo/ts2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ts2.vcluster.ai
    http:
      paths:
      - backend:
          service:
            name: open-webui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-open-webui-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ots2.vcluster.ai
    http:
      paths:
      - backend:
          service:
            name: open-webui-ollama
            port:
              number: 11434
        path: /
        pathType: ImplementationSpecific
